
2013-April-08 Struan Robertson
	
	* CollisionOperator.cpp: Fix for linux build break.

2013-April-08 Chris Morley

	Use different bath gases in the same run
	* src/plugins/ExponentialDown.cpp,
	src/EnergyTransferModel.h,src/plugins/GaussianModel.cpp: 
	parse for deltaEDown for specified bath gases
	 
	* src/MolecularComponents.cpp,src/MolecularComponents.h,
	src/MoleculeManager.h: keep a map of bathGasName/energyTransferModel
	rather than just m_bathGas.

	* src/System.cpp: do parsing of <me:bathGas> before reactions and
	molecules

	* src/MesmerEnv.h,src/unitsConversion.h: extra variable to transmit
	current bath gas.

	* src/Persistence.h,src/XMLPersist.cpp,src/XMLPersist.h: added a
	parameter to XmlMoveToProperty() to make it easier to move to the
	next sibling CML property

	* src/CollisionOperator.cpp: error message

	*src/Constants.h,src/MolecularComponents.cpp: units conversion for
	hessians from Robin


2013-April-07 Struan Robertson

	* CollisionOperator.cpp/.h, TMatrix.h: Replaced d2D types with generic
	STL types or TMatrix types.

2013-March-31 Struan Robertson

	* MolecularComponents.cpp/.h: Re-orientation of molecular system and 
	orthogonalization of projected modes.

2013-March-28 Struan Robertson

	* MolecularComponents.cpp/.h, Molecule.cpp: Units added for Hessian 
	and frequencies updated following diagonlization of Hessian.

	* examples/Butyl_H_to_Butane/Butyl_H_to_Butane.xml: Added units for
	Hessian.
	
2013-March-27 Chris Morley
	* src/MolecularComponents.cpp: transparently read hessian matrices
	with upper or lower triangle or complete. (CML files from Gaussian
	use upper triangle.)

	* examples/Butyl_H_to_Butane/Butyl_H_to_Butane.xml,
	src/MolecularComponents.cpp: in dictRref use me:hessian rather
	than me:Hessian.

2013-March-26 Struan Robertson

	* MolecularComponents.cpp/.h, HinderedRotorQM1D.cpp: Implementation 
	of Sharma, Raman and Green algorithm for the elimination of internal 
	rotational mode frequencies.
	